--- a/html_css/homework/src/css/style.css
+++ b/html_css/homework/src/css/style.css
@@ -1,63 +1,288 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-header{
-     width:100%;
-     padding:20px 0;
-     display: flex;
-     justify-content: space-around;
-     background-color: black;
-}
-.headerList{
-    text-decoration: none;
-    color:white;
-}
-.headerList:hover{
-    color:orange;
-    transition: .2s;
-    border-bottom: 1px solid orange;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                /*  Animation for Serhiy    */
-
-
-/* .astro{
-	margin:10vh auto;
-	height:193px;
-	width:151px;
-	background:url("astro.png");
-	animation:astro 0.8s steps(20) infinite;
+.wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
-@keyframes astro{
-	0%{
-		background-position: 0px;
-	}
-	100%{
-		background-position: -3025px;
-	}
-} */
+
+.wrapper .content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.wrapper .content .header {
+  background-color: #445162;
+}
+
+.wrapper .content .header .header__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.wrapper .content .header .header__row .header__content {
+  color: #fff;
+}
+
+.wrapper .content .header .header__row .header__content .header__title {
+  font-size: 30px;
+  margin: 20px 0;
+}
+
+.wrapper .content .header .header__row .header__content .header__list {
+  margin: 20px 0;
+  padding-left: 30px;
+  line-height: 26px;
+}
+
+.wrapper .content .header .header__row .header__photo img {
+  height: 200px;
+  padding: 50px;
+}
+
+.wrapper .content .what {
+  padding: 50px;
+}
+
+.wrapper .content .what .what__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.wrapper .content .what .what__row .what__img {
+  padding: 0 50px 0 0;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 350px;
+          flex: 0 0 350px;
+}
+
+.wrapper .content .what .what__row .what__img img {
+  width: 100%;
+}
+
+.wrapper .content .what .what__row .what__body {
+  margin: 0 0 0 50px;
+}
+
+.wrapper .content .what .what__row .what__body .what__title {
+  padding: 0 0 20px;
+}
+
+.wrapper .content .what .what__row .what__body .what__text {
+  padding: 20px 0;
+}
+
+.wrapper .content .what .what__row .what__body .what__text p {
+  padding: 10px 0;
+}
+
+.wrapper .content .columns {
+  padding: 0 50px 0 20px;
+  background-color: #f5f5f5;
+}
+
+.wrapper .content .columns .columns__title {
+  text-align: center;
+  margin: 0 0 30px 0;
+  padding: 30px 0 0 0;
+}
+
+.wrapper .content .columns .columns__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  color: #445162;
+}
+
+.wrapper .content .columns .columns__row .columns__column {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+  margin: 0 0 50px 0;
+}
+
+.wrapper .content .columns .columns__row .columns__column .columns__item .item__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.wrapper .content .columns .columns__row .columns__column .columns__item .item__row .item__img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 150px;
+          flex: 0 0 150px;
+}
+
+.wrapper .content .columns .columns__row .columns__column .columns__item .item__row .item__img img {
+  position: relative;
+  width: 100%;
+}
+
+.wrapper .content .columns .columns__row .columns__column .columns__item .item__row .item__body {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  padding: 0 20px;
+}
+
+.wrapper .content .columns .columns__row .columns__column .columns__item .item__row .item__body .item__title {
+  font-size: 24px;
+  line-height: 30px;
+  padding: 0 0 10px 0;
+}
+
+.wrapper .content .columns .columns__row .columns__column .columns__item .item__row .item__body .item__text {
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.wrapper .content .cards {
+  padding: 50px;
+}
+
+.wrapper .content .cards .cards__title {
+  text-align: center;
+  margin: 0 0 50px 0;
+}
+
+.wrapper .content .cards .cards__body {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.wrapper .content .cards .cards__body .cards__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.wrapper .content .cards .cards__body .cards__row .cards__column {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 30%;
+          flex: 0 1 30%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.wrapper .content .cards .cards__body .cards__row .cards__column .cards__item {
+  background-color: #445162;
+  color: white;
+  border-radius: 5px;
+  border: 1px solid #445162;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.wrapper .content .cards .cards__body .cards__row .cards__column .cards__item .cards__name {
+  text-align: center;
+  padding: 20px;
+  font-size: 30px;
+  text-transform: uppercase;
+}
+
+.wrapper .content .cards .cards__body .cards__row .cards__column .cards__item .cards__subname {
+  color: #445162;
+  font-size: 30px;
+  background-color: #f5f5f5;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 10px;
+}
+
+.wrapper .content .cards .cards__body .cards__row .cards__column .cards__item .cards__text {
+  padding: 15px;
+  line-height: 22px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.wrapper .content .cards .cards__body .cards__row .cards__column .cards__item .cards__text p {
+  margin: 10px 0;
+}
+
+.wrapper .content .cards .cards__body .cards__row .cards__column .cards__item .cards__btn {
+  display: block;
+  text-align: center;
+  margin: 15px 20px;
+  text-decoration: none;
+  background-color: #f5f5f5;
+  color: #445162;
+  padding: 10px;
+  border-radius: 5px;
+  text-transform: uppercase;
+}
+
+.wrapper .title {
+  font-size: 30px;
+  line-height: 30px;
+  color: #445162;
+}
+
+.wrapper .container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.wrapper .footer {
+  background-color: #f5f5f5;
+}
+
+.wrapper .footer__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 65px;
+}
+
+.wrapper .footer__row__text {
+  font-style: 12px;
+  letter-spacing: 0.3px;
+  color: #445162;
+}
+/*# sourceMappingURL=style.css.map */
