Landing for Serhiy, small changing

--- a/html_css/homework/src/css/style.scss
+++ b/html_css/homework/src/css/style.scss
@@ -180,7 +180,7 @@ $txtcolor:#445162;
                                 margin: 15px 20px;
                                 text-decoration: none;
                                 background-color:$bgcolor;
-                                color: #445162;
+                                color: $txtcolor;
                                 padding: 10px;
                                 border-radius: 5px;
                                 text-transform: uppercase;
