--- a/html_css/homework/src/css/style.css
+++ b/html_css/homework/src/css/style.css
@@ -212,9 +212,7 @@
           flex-direction: column;
 }
 
-.wrapper .content .cards .cards__body .cards__row .cards__column .cards__item .cards__name p{
-  color:red;
-}
+.wrapper .content .cards .cards__body .cards__row .cards__column .cards__item .cards__name {
   text-align: center;
   padding: 20px;
   font-size: 30px;
