--- a/React/first/src/components/ItemInput/ItemInput.scss
+++ b/React/first/src/components/ItemInput/ItemInput.scss
@@ -1,3 +1,4 @@
+
 .item-input{
     display: block;
     margin: 50px auto;
@@ -14,4 +15,11 @@
     outline:none;
     border-radius: 5px;
     box-shadow: 0 0 1px green;
+}
+.iteminput-btn{
+    display: block;
+    margin: 0 auto; 
+    border: 1px solid black;
+    border-radius: 3px;
+    padding: 15px 25px;
 }
