--- a/React/first/src/components/Item/Item.css
+++ b/React/first/src/components/Item/Item.css
@@ -8,27 +8,25 @@
   border: 1px solid black;
   border-radius: 5px;
   margin: 50px auto;
-  padding: 0px 5px;
+  padding: 2px;
   width: 500px;
-}
-
-.row-item .item-id {
-  font-weight: 500;
-  padding: 0 0 0 15px;
 }
 
 .row-item .item-content {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
-  text-align: center;
+  margin: 5px;
+  vertical-align: center;
 }
 
 .row-item .item-btn {
-  background-color: gray;
+  background-color: red;
   border: 0;
   outline: 0;
   border-radius: 2px;
-  margin-right: 15px;
+  margin: 0 5px 0 0;
+  padding: 0 10px;
+  color: white;
 }
 /*# sourceMappingURL=Item.css.map */
