--- a/React/first/src/components/Item/Item.scss
+++ b/React/first/src/components/Item/Item.scss
@@ -4,24 +4,23 @@
     border: 1px solid black;
     border-radius: 5px;
     margin: 50px auto;
-    padding: 0px 5px;
+    padding: 2px;
     width: 500px;
 
-    .item-id{
-        font-weight: 500;
-        padding: 0 0 0 15px;
-    }
 
     .item-content{
         flex: 1 1 auto;
-        text-align: center;
+        margin: 5px;
+        vertical-align: center;
     }
 
     .item-btn{
-        background-color: gray;
+        background-color: rgb(255, 0, 0);
         border: 0;
         outline: 0;
         border-radius: 2px;
-        margin-right: 15px;
+        margin: 0 5px 0 0;
+        padding: 0 10px;
+        color:white;
     }
 }
